Spec "Software" => "implementation"

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -2,7 +2,7 @@
 %
 % Intended to be included within its own section.
 
-Definitions within this subsection are used most frequently by the Software
+Definitions within this subsection are used most frequently by the software
 developers addressed by this specification.
 
 \begin{description}
@@ -118,10 +118,6 @@ developers addressed by this specification.
   \dt{side-effect}
   Non-local data that is altered as a consequence of applying a function or
   calling a procedure.
-
-  \dt{Software}
-  The result of implementing, through the use of machine code or a programming
-  language, this specification.
 
   \dt{string}
   A finite sequence of symbols---often bytes. When used on its own,
