--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -19,7 +19,8 @@ specification to resolve implementation issues and should exercise that ability.
   Alternatively, the adverb ``optionally''; denotes a requirement whose
   implementation is not required and may be omitted; such \shall be used only to
   provide flexibility for implementors to exercise their best judgment or to
-  denote requirements that are not essential to the operation of the Software.
+  denote requirements that are not essential to the operation of the
+  implementation.
 
   \dt{Undefined}
   The error condition results in behavior that is not defined by a particular
@@ -29,7 +30,7 @@ specification to resolve implementation issues and should exercise that ability.
 
   \dt{Unspecified}
   The behavior is not determined by this specification or is inconsequential to
-  the Software's operation.
+  the implementation's operation.
 
   \dt{Deprecated}
   When used within context of this specification: the feature or requirement
@@ -42,4 +43,10 @@ specification to resolve implementation issues and should exercise that ability.
   \dt{Removed}
   A feature or requirement mentioned in an earlier revision of this
   specification has been removed and will not be superseded.
+
+  \dt{implementation}
+  Software that implements this specification.
+
+  \dt{conforming implementation}
+  A software implementation that strictly conforms to this specification.
 \end{description}
