Added "associative array" definition

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -21,6 +21,10 @@ developers addressed by this specification.
   $T$'' or simply an ``array of $T$''. An array of arrays is said to be
   multidimensional.
 
+  \dt{associative array}
+  An array indexed using hashed character strings as ``keys''; said to be
+  ``key/value'', where the value is ``associated'' with its respective key.
+
   \dt{bit}
   A value of $0$ or $1$.
 
