Added Exempt definition to specs

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -22,6 +22,10 @@ specification to resolve implementation issues and should exercise that ability.
   denote requirements that are not essential to the operation of the
   implementation.
 
+  \dt{Exempt}
+  Denotes a condition under which an implementation need not conform to a
+  requirement.
+
   \dt{Undefined}
   The error condition results in behavior that is not defined by a particular
   standard; this term \shall be used only to document other standards or
