Added "section" term

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -2,8 +2,8 @@
 %
 % Intended to be included within its own section.
 
-Portions of this subsection conform to \rfc{2119}: ``Key words for use in RFCs
-to Indicate Requirement Levels''. Certain terms from the RFC have been expressly
+Portions of this section conform to \rfc{2119}: ``Key words for use in RFCs to
+Indicate Requirement Levels''. Certain terms from the RFC have been expressly
 avoided; for example, the terms ``should'' and ``should not'' are not used
 because this specification's audience has the capability to alter the
 specification to resolve implementation issues and should exercise that ability.
@@ -33,6 +33,10 @@ specification to resolve implementation issues and should exercise that ability.
   \dt{Removed}
   A feature or requirement mentioned in an earlier revision of this
   specification has been removed and will not be superseded.
+
+  \dt{section}
+  The section containing this term, as well as any subsections contained within
+  it.
 
   \dt{Shall; Must}
   Denotes a mandatory requirement.
