Added symbols to term list for section and paragraph references

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -57,4 +57,10 @@ specification to resolve implementation issues and should exercise that ability.
   \dt{Unspecified}
   The behavior is not determined by this specification or is inconsequential to
   the implementation's operation.
+
+  \dt{\S}
+  Section reference
+
+  \dt{\P}
+  Paragraph reference
 \end{description}
