Resolved overflow with associative array definition

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -22,7 +22,7 @@ developers addressed by this specification.
   multidimensional.
 
   \dt{associative array}
-  An array indexed using hashed character strings as ``keys''; said to be
+  An array indexed using hashed character strings as keys; said to be
   ``key/value'', where the value is ``associated'' with its respective key.
 
   \dt{bit}
