Added index entries for the majority of the text thusfar

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -74,15 +74,15 @@ developers addressed by this specification.
   of integers''.}
 
   \dt{float}
-  A datatype using binary floating point.
+  A datatype using binary ^[floating-point].
 
-  \dt{floating point}
+  \dt{floating-point}
   A binary approximation of a real number up to a fixed number of digits,
   generally represented by a sign bit; a significand (also called the
   ``coefficient'' and less often the ``mantissa''); and a scaling base and
   exponent. See IEEE 754. For the purposes of this specification, it \shall be
   understood that the result of an arithmetic operation in which one of the
-  operands is a floating point number may not be able to be represented exactly
+  operands is a ^floating-point number may not be able to be represented exactly
   in its binary representation, which may result in precision errors. These
   errors may cause problems with rounding operations.
 
