Added ISO class codes to insurance definitions

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -21,4 +21,77 @@ see~\cite{gls-ins-calif}.
   \dt{quote}
   An estimate of the cost of insurance based upon information supplied to the
   insurance company by the applicant.
+
+  \dt{risk}
+  The individual or property to which the insurance policy or quote relates.
+\end{description}
+
+
+\nextsection{ISO Classes}
+Accompanying each description is a list of the ^ISO ^[ISO!class code]s that
+apply.
+
+\begin{description}
+  \incompletei
+  \dt{1--4 Family Dwelling}
+    \todo{Description needed.}
+    \begin{description}
+      \isoclassdef 63010 One family; tenant occupied.
+      \isoclassdef 63011 Two family; tenant occupied.
+      \isoclassdef 63012 Three family; tenant occupied.
+      \isoclassdef 63013 Four family; tenant occupied.
+    \end{description}
+
+  \incompletei
+  \dt{Apartment}
+    \todo{Description needed.}
+    \begin{description}
+      \isoclassdef 60010 No other class code (NOC)---there is no other class
+      code that would be a good fit for this risk.
+      \isoclassdef 60011 Garden (apartment complex).\footnote{``Garden'' refers
+      to a cluster of apartment buildings---as opposed to a single building
+      housing multiple units---that historically (but may not necessarily be)
+      clustered around a garden; apartment complex.% Consulted Mary Jo
+      }
+
+    \end{description}
+
+  \incompletei
+  \dt{Lessor's Risk}
+    \todo{Description needed.}
+    \begin{description}
+      \isoclassdef 61212 No not-for-profit; \emph{not} maintained by the insured.
+      \isoclassdef 61216 Not-for-profit; \emph{not} maintained by the insured.
+      \isoclassdef 61217 No not-for-profit; maintained by the insured.
+      \isoclassdef 61218 Not-for-profit; maintained by the insured.
+      \isoclassdef 68702 Warehouse with multiple interests.
+      \isoclassdef 68703 Warehouse with a single interest.
+    \end{description}
+
+  \incompletei
+  \dt{Subcontractor}
+    \todo{Description needed.}
+    \begin{description}
+      \isoclassdef 91583 Performing work on 1--2 Family Dwellings.
+      \isoclassdef 91585 Performing work on other buildings.
+    \end{description}
+
+  \incompletei
+  \dt{Vacant Building}
+    \todo{Description needed.}
+    \begin{description}
+      \isoclassdef 68604 Vacant factory building.
+      \isoclassdef 68606 Vacant non-factory building that is \emph{not} owned
+                         by a not-for-profit company.
+      \isoclassdef 60607 Vacant non-factory building that \emph{is} owned by a
+                         not-for-profit company.
+    \end{description}
+
+  \dt{Vacant Land}
+    A ^risk with no building on the property; rated by acreage.
+    \begin{description}
+      \isoclassdef 49451 Rural area; up to first 500 acres.
+      \isoclassdef 49452 Urban; up to first 50 acres.
+    \end{description}
+
 \end{description}
