Clarified shall and shall not definitions to state that the results are undefined if the requirement is not obeyed

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -39,10 +39,14 @@ specification to resolve implementation issues and should exercise that ability.
   it.
 
   \dt{Shall; Must}
-  Denotes a mandatory requirement.
+  Denotes a mandatory requirement. If an implementation does not implement such
+  a requirement, then the implementation is not conforming and the results under
+  such a requirement are \undefined.
 
   \dt{Shall Not; Must Not}
-  Denotes an absolute prohibition.
+  Denotes an absolute prohibition. If an implementation does not honor such a
+  prohibition, then the implementation is not conforming and the results under
+  such a requirement are \undefined.
 
   \dt{Superseded}
   The feature or requirement mentioned in an earlier revision of this
