Added \top and \bot to definitions

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -130,4 +130,10 @@ developers addressed by this specification.
 
   \dt{type}
   Within the context of data, see ``data type''.
+
+  \dt{$\bot$}
+  Boolean value of 0; ``false''.
+
+  \dt{$\top$}
+  Boolean value of 1; ``true'';
 \end{description}
