Added authorization parties for all existing spec content

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -2,6 +2,8 @@
 %
 % Intended to be included within its own section.
 
+\begindeptgroup{it}
+
 Definitions within this subsection are used most frequently by the software
 developers addressed by this specification.
 
@@ -137,3 +139,5 @@ developers addressed by this specification.
   \dt{$\top$}
   Boolean value of 1; ``true'';
 \end{description}
+
+\enddeptgroup
