--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -4,6 +4,8 @@
 %
 % Also requires gls-ins-calif definition.
 
+\begindeptgroup{uw}
+
 For a glossary of insurance terms from the state of California,
 see~\cite{gls-ins-calif}.
 
@@ -95,3 +97,5 @@ apply.
     \end{description}
 
 \end{description}
+
+\enddeptgroup
