--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -2,6 +2,8 @@
 %
 % Intended to be included within its own section.
 
+\begindeptgroup{pm}
+
 Portions of this section conform to \rfc{2119}: ``Key words for use in RFCs to
 Indicate Requirement Levels''. Certain terms from the RFC have been expressly
 avoided; for example, the terms ``should'' and ``should not'' are not used
@@ -68,3 +70,5 @@ specification to resolve implementation issues and should exercise that ability.
   \dt{\P}
   Paragraph reference
 \end{description}
+
+\enddeptgroup
