Added square and left arrow symbols to spec definitions

--- a/dfn/spec.tex
+++ b/dfn/spec.tex
@@ -69,6 +69,16 @@ specification to resolve implementation issues and should exercise that ability.
 
   \dt{\P}
   Paragraph reference
+
+  \dt{$\leftarrow$}
+  Store value into variable; as opposed to `$=$', which denotes a declarative
+  (and consequently immutable) assignment.
+
+  \dt{$\square$}
+  End of example or proof.
+
+  \dt{$\blacksquare$}
+  End of formal definition.
 \end{description}
 
 \enddeptgroup
