Added abstract with copyright notice

--- a/dfn/authparty.tex
+++ b/dfn/authparty.tex
@@ -3,7 +3,7 @@
 \begindeptgroup{pm}
 
 \index{authorization|(}
-\label{authorize}
+\label{s:authorize}
 
 This specification is currently a draft and requires that each requirement be
 verified and authorized for development.
