Added monoline and package definitions

--- a/dfn/ins.tex
+++ b/dfn/ins.tex
@@ -17,6 +17,13 @@ see~\cite{gls-ins-calif}.
   An approximation of the cost of insurance based on incomplete or limited
   information provided by the applicant.
 
+  \dt{monoline}
+  A single line of business (e.g. ^[Property] or ^[General Liability]); contrast
+  to ^[package].
+
+  \dt{package}
+  Multiple lines of business; contrast to ^[monoline].
+
   \dt{policy}
   Written insurance contract.
 
