Added bug and regression terms

--- a/dfn/dev.tex
+++ b/dfn/dev.tex
@@ -33,6 +33,9 @@ developers addressed by this specification.
   \dt{boolean}
   A datatype whose storage is capable of representing a value of $1$ or $0$.
 
+  \dt{bug}
+  An implementation of a specific requirement is non-conforming.
+
   \dt{byte}
   A bit string of machine-dependent length that \shall be at least $8$ bits.
 
@@ -114,6 +117,10 @@ developers addressed by this specification.
 
   \dt{procedure}
   Similar to a function, but does not return any value; implies side-effects.
+
+  \dt{regression}
+  An implementation of a requirement, having previously conformed, is no longer
+  conforming; a ^bug.
 
   \dt{runtime}
   Occurs during the execution of the program.
