--- a/task.sty
+++ b/task.sty
@@ -1,6 +1,11 @@
 % Task environment
 
+\RequirePackage[usenames,dvipsnames]{xcolor}
+
 \newcommand\taskname{Requisite}
+
+% Tango Icon Theme Aluminum
+\definecolor{taskrulecolor}{HTML}{2e3436}
 
 \newcounter{taskc}
 \setcounter{taskc}{0}
@@ -18,27 +23,26 @@
 }
 
 \newlength\taskspace
-
-\newlength\@@task@barwidth
-\setlength\@@task@barwidth\textwidth
-\addtolength\@@task@barwidth\marginparwidth
-\addtolength\@@task@barwidth\marginparsep
 \newenvironment{task}[1][]%
   {%
     \goodbreak
     \setlength\taskspace{2ex}%
     \refstepcounter{taskc}%
     \vspace{-0.5\parskip}%
-    \leavevmode\llap{\rule{\marginparwidth}{2pt}}%
-    \rule{\textwidth}{2pt}%
+    \textcolor{taskrulecolor}{%
+      \leavevmode\llap{\rule{\marginparwidth}{2pt}}%
+      \rule{\textwidth}{2pt}%
+    }%
     \vspace{-0.5\baselineskip}%
     \begin{@task}[#1]%
   }%
   {%
     \end{@task}%
     \vspace{-0.85\baselineskip}%
-    \leavevmode\llap{\rule{\marginparwidth}{1pt}}%
-    \rule{\textwidth}{1pt}%
+    \textcolor{taskrulecolor}{%
+      \leavevmode\llap{\rule{\marginparwidth}{1pt}}%
+      \rule{\textwidth}{1pt}%
+    }%
     \ignorespaces
   }
 
