--- a/task.sty
+++ b/task.sty
@@ -106,7 +106,13 @@
   {\goodbreak\ignorespaces}
 
 
-\def\@task@h#1-#2||{#1--#2}
+\def\@task@h#1-#2||{%
+  #1%
+  \ifnum#1=#2\else
+    --#2%
+  \fi
+}
+
 \def\@task@setregs#1-#2||{%
   \@@hmin#1\relax
   \@@hmax#2\relax
