Summary for Annex II now at bottom of page

--- a/task.sty
+++ b/task.sty
@@ -144,6 +144,7 @@
 
 
 \newcommand\tasksummary[1][]{{%
+  \vfill
   \subsection{Summary}
   \pnumoff
   \edef\@@range{\arabic{tasktmin}-\arabic{tasktmax}}%
