Added missing amssymb to lvspec

--- a/lvspec.cls
+++ b/lvspec.cls
@@ -23,6 +23,7 @@
 \RequirePackage{url}
 \RequirePackage{varioref}
 \RequirePackage{amsmath}
+\RequirePackage{amssymb}
 \RequirePackage{multirow}
 \RequirePackage{task}
 
