Added insurance terminology

--- a/common.bib
+++ b/common.bib
@@ -1,3 +1,10 @@
+@misc{ gls-ins-calif,
+  author="California Department of Insurance",
+  title="Glossary of Insurance Terms",
+  note="Accessed 23 Jul 2013",
+  url="http://www.insurance.ca.gov/0100-consumers/0010-buying-insurance/0050-glossary-terms/"
+}
+
 % Misc.
 @misc{ brooks-law,
   title="Brooks's law",
