Draft mode for lvspec.tex, but forcing images to be enabled

--- a/lvspec.tex
+++ b/lvspec.tex
@@ -2,9 +2,9 @@
 %
 % Yep.
 
-\documentclass{lvspec}
+\documentclass[draft]{lvspec}
 \usepackage{multicol}
-\usepackage{graphicx}
+\usepackage[final]{graphicx}
 
 \makeatletter
   \def\@lvspec@titlecmd{%
