--- a/lvspec.tex
+++ b/lvspec.tex
@@ -89,8 +89,9 @@
 \end{center}
 
 
+\appendix
 \chapter{Creating Specifications with \LaTeX}
-This chapter is an example of an implementation of the specifications and is
+This appendix is an example of an implementation of the specifications and is
 useful as an API reference, but \shallnot be used in place of formal
 specifications with regards to implementation.
 
@@ -226,4 +227,32 @@ command \verb|\incompletei|, which also includes the name of the department.
 \end{ex}
 
 \enddeptgroup
+
+
+\pnumoff
+\chapter{\LaTeX\ Tips}
+This appendix is by no means comprehensive.
+
+\section{Generating PDF}
+A PDF can be generated from the~\TeX\ source files by issuing the command
+\cmd{pdflatex}; indexes are generated using the command \cmd{makeidx}; and
+bibliographies are generated using \cmd{bibtex}. First, \cmd{pdftex} must be run
+to determine the page numbers and gather all the references. Then, after each of
+the latter two commands are run, \cmd{pdftex} must be re-run in order to update
+the document. Since the act of updating the document may alter the references,
+it is recommended to run \cmd{pdftex} multiple times at the end:\footnote{See
+\path{lvspec.git/Makefile} for an example.}
+
+\begin{ex}
+  \begin{verbatim}
+$ pdftex src.tex \
+> && bibtex src.tex \
+> && makeindex src \
+> && pdftex src.tex \
+> && pdftex src.tex
+  \end{verbatim}
+\end{ex}
+
+\noindent You may decide to omit \cmd{bibtex} if you are not using a
+bibliography (but you probably should cite your information and rationale).
 \end{document}
