Correction: dwspec => lvspec

--- a/lvspec.tex
+++ b/lvspec.tex
@@ -95,7 +95,7 @@ This appendix is an example of an implementation of the specifications and is
 useful as an API reference, but \shallnot be used in place of formal
 specifications with regards to implementation.
 
-Using the {\tt dwspec} document class with enable paragraph numbering; {\tt
+Using the {\tt lvspec} document class with enable paragraph numbering; {\tt
 draft} mode will enable signature lines, as shown to the right.
 
 \begin{ex}
